# manpagesbot

./: .gitignore  README.md  manscript.sh  meson.build
include/: manpagesbot.h  message.h
src/: main.c  manpagesbot.c  message.c
